--- a/config/database.yml
+++ b/config/database.yml
@@ -1,23 +1,9 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
 default: &default
-  adapter: mysql2
+  adapter: postgresql
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
   encoding: utf8
-  username: root
-  password:
-  host: 127.0.0.1
-  port: 3306
-#  flags:
-#    - -COMPRESS
-#    - FOUND_ROWS
-#    - MULTI_STATEMENTS
-#  secure_auth: false
+  username: lgg
+  password: l
 
 development:
   <<: *default
